[gd_scene load_steps=6 format=3 uid="uid://2an2d6mpjn61"]

[ext_resource type="Texture2D" uid="uid://dp6b5kun1e01h" path="res://Torres/Tower.png" id="1_2toru"]
[ext_resource type="Script" path="res://Script/plataforma.gd" id="1_y18xw"]
[ext_resource type="Texture2D" uid="uid://oae03inr8hap" path="res://Torres/Cañon/cannonMini.png" id="3_51c8g"]
[ext_resource type="Texture2D" uid="uid://bggp4hh3t1q6w" path="res://Torres/MG/mgMini.png" id="4_fhom7"]
[ext_resource type="Texture2D" uid="uid://c1o8fiir2l3jo" path="res://Torres/Misil/missileMini.png" id="5_qiymu"]

[node name="Plataforma" type="Node2D"]
script = ExtResource("1_y18xw")

[node name="Seleccionar_torre" type="Button" parent="."]
offset_left = -29.0
offset_top = -31.0
offset_right = 30.0
offset_bottom = 30.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.274, 0.274)
texture = ExtResource("1_2toru")

[node name="Opciones" type="VBoxContainer" parent="."]
visible = false
offset_top = -59.0
offset_right = 152.0
offset_bottom = 20.0

[node name="Cannon" type="Button" parent="Opciones"]
layout_mode = 2
text = "Cañon $100"
icon = ExtResource("3_51c8g")

[node name="Mg" type="Button" parent="Opciones"]
layout_mode = 2
text = "Metralleta $50"
icon = ExtResource("4_fhom7")

[node name="Missile" type="Button" parent="Opciones"]
layout_mode = 2
text = "Misil $200
"
icon = ExtResource("5_qiymu")

[connection signal="pressed" from="Seleccionar_torre" to="." method="_on_seleccionar_torre_pressed"]
[connection signal="pressed" from="Opciones/Cannon" to="." method="_on_cannon_pressed"]
[connection signal="pressed" from="Opciones/Mg" to="." method="_on_mg_pressed"]
[connection signal="pressed" from="Opciones/Missile" to="." method="_on_missile_pressed"]
